# chromia-neural-interface

./: .env.sample  .gitignore  Dockerfile  Dockerfile.bun  Dockerfile.chr  Dockerfile.chr-node  Dockerfile.init  Dockerfile.init-param  Dockerfile.terminal  README.md  build.sh  bun.lockb  chromia.yml  docker-compose.yml  healthCheck.sh  init-params-decoder  init.sql  package-lock.json  package.json  result  start.sh  tailwind.config.js
.parcel-cache/: 2b7f903c72fe41c8-RequestGraph  ba909e0fa246aaa1-AssetGraph  lock.mdb  snapshot-2b7f903c72fe41c8.txt
agent/: config.yml  main.ts
agent/services/: chromia.ts  openai.ts
agent/tools/: memory.ts
init-params-manager/: README.md
initializer/: Cargo.toml
initializer/src/: handler.rs  main.rs
local-init/: Cargo.toml
local-init/src/: handler.rs  response.rs
script/: create_wallet.sh
src/: main.rell
terminal/: Dockerfile  package-lock.json  start.sh
terminal/src/: client.js  server.js
ui/: Dockerfile  index.css  index.html  index.js
